--- a/package.json
+++ b/package.json
@@ -2,23 +2,25 @@
 	"name": "the_management",
 	"private": true,
 	"dependencies": {
-		"@fortawesome/fontawesome-free": "^6.1.0",
+		"@fortawesome/fontawesome-free": "^6.1.1",
 		"country-code-lookup": "^0.0.20",
 		"dotenv": "^16.0.0",
 		"dragula": "^3.7.3",
 		"express": "^4.17.3",
 		"fs": "^0.0.1-security",
-		"google-auth-library": "^7.14.0",
-		"googleapis": "^97.0.0",
+		"google-auth-library": "^7.14.1",
+		"googleapis": "^98.0.0",
 		"moment": "^2.29.1",
 		"node-storage": "^0.0.9",
 		"pug": "^3.0.2",
-		"ttapi": "^4.0.3"
+		"ttapi": "^4.0.3",
+		"node-forge": ">=1.3.0"
 	},
 	"devDependencies": {
 		"eslint": "^8.11.0",
 		"jest": "^27.5.1",
-		"prettier": "^2.6.0"
+		"prettier": "^2.6.1",
+		"node-forge": ">=1.3.0"
 	},
 	"scripts": {
 		"lint": "eslint . --ext .js --ignore-pattern node_modules/",
